랭킹 리스트 작업

--- a/src/handlebars/templates/main.hbs
+++ b/src/handlebars/templates/main.hbs
@@ -15,75 +15,83 @@
             <li>
                 <a href="#">
                     <img src="../../assets/images/img_store1.png" alt="">
-                    <div class="list__info">
-
-                    </div>
                     <p class="title">우야우야</p>
                     <span class="desc">스테이크와 와인 분위기 있는 식사</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store2.png" alt="">
                     <p class="title">성수족발</p>
                     <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store3.png" alt="">
                     <p class="title">일오닭갈비</p>
                     <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store4.png" alt="">
                     <p class="title">버거인</p>
                     <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store5.png" alt="">
                     <p class="title">피자업</p>
                     <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store6.png" alt="">
                     <p class="title">라멘101</p>
                     <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span> 
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store6.png" alt="">
                     <p class="title">버거인</p>
                     <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store5.png" alt="">
                     <p class="title">피자업</p>
                     <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store4.png" alt="">
                     <p class="title">라멘101</p>
                     <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store3.png" alt="">
                     <p class="title">우야우야</p>
                     <span class="desc">스테이크와 와인 분위기 있는 식사</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store2.png" alt="">
                     <p class="title">성수족발</p>
                     <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
                 </a>
             </li>
             <li>
                 <a href="#">
+                    <img src="../../assets/images/img_store1.png" alt="">
                     <p class="title">일오닭갈비</p>
                     <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
                 </a>
@@ -102,77 +110,277 @@
             </div>
         </div>
 
-        <ul class="slide__list store__list">
+        <ul class="slide__list ranking__list">
             <li>
+                <img src="../../assets/images/img_store1.png" alt="">
+                <div class="star__scope">
+                    <div class="star__input">
+                        <div class="input__wrap">
+                            <input type="radio" id="star1-1" class="input"  name="star1">
+                            <label for="star1-1" class="label__star">
+                                <span class="blind">1점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star1-2" class="input" name="star1">
+                            <label for="star1-2" class="label__star">
+                                <span class="blind">2점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star1-3" class="input" name="star1">
+                            <label for="star1-3" class="label__star">
+                                <span class="blind">3점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star1-4" class="input" name="star1">
+                            <label for="star1-4" class="label__star">
+                                <span class="blind">4점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star1-5" class="input" name="star1">
+                            <label for="star1-5" class="label__star">
+                                <span class="blind">5점</span>
+                            </label>
+                        </div>
+                    </div>
+                    <span class="scope">180</span>
+                </div>
+                    
                 <a href="#">
-                    <p class="title">우야우야</p>
-                    <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                    <div class="list__info">
+                        <span class="location">강남 · 서울특별시</span>
+                        <p class="title">우야우야</p>
+                        <span class="desc">스테이크와 와인 분위기 있는 식사</span>
+                    </div>
                 </a>
             </li>
             <li>
+                <img src="../../assets/images/img_store2.png" alt="">
+                <div class="star__scope">
+                    <div class="star__input">
+                        <div class="input__wrap">
+                            <input type="radio" id="star2-1" class="input" name="star2">
+                            <label for="star2-1" class="label__star">
+                                <span class="blind">1점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star2-2" class="input" name="star2">
+                            <label for="star2-2" class="label__star">
+                                <span class="blind">2점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star2-3" class="input" name="star2">
+                            <label for="star2-3" class="label__star">
+                                <span class="blind">3점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star2-4" class="input" name="star2">
+                            <label for="star2-4" class="label__star">
+                                <span class="blind">4점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star2-5" class="input" name="star2">
+                            <label for="star2-5" class="label__star">
+                                <span class="blind">5점</span>
+                            </label>
+                        </div>
+                    </div>
+                    <span class="scope">180</span>
+                </div>
+                
                 <a href="#">
-                    <p class="title">성수족발</p>
-                    <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                    <div class="list__info">
+                        <span class="location">강남 · 서울특별시</span>
+                        <p class="title">성수족발</p>
+                        <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
+                    </div>
                 </a>
             </li>
             <li>
+                <img src="../../assets/images/img_store3.png" alt="">
+                <div class="star__scope">
+                    <div class="star__input">
+                        <div class="input__wrap">
+                            <input type="radio" id="star3-1" class="input" name="star3">
+                            <label for="star3-1" class="label__star">
+                                <span class="blind">1점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star3-2" class="input" name="star3">
+                            <label for="star3-2" class="label__star">
+                                <span class="blind">2점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star3-3" class="input" name="star3">
+                            <label for="star3-3" class="label__star">
+                                <span class="blind">3점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star3-4" class="input" name="star3">
+                            <label for="star3-4" class="label__star">
+                                <span class="blind">4점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star3-5" class="input" name="star3">
+                            <label for="star3-5" class="label__star">
+                                <span class="blind">5점</span>
+                            </label>
+                        </div>
+                    </div>
+                    <span class="scope">180</span>
+                </div>
                 <a href="#">
-                    <p class="title">일오닭갈비</p>
-                    <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                    <div class="list__info">
+                        <span class="location">강남 · 서울특별시</span>
+                        <p class="title">일오닭갈비</p>
+                        <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                    </div>
                 </a>
             </li>
             <li>
+                <img src="../../assets/images/img_store4.png" alt="">
+                <div class="star__scope">
+                    <div class="star__input">
+                        <div class="input__wrap">
+                            <input type="radio" id="star4-1" class="input" name="star4">
+                            <label for="star4-1" class="label__star">
+                                <span class="blind">1점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star4-2" class="input" name="star4">
+                            <label for="star4-2" class="label__star">
+                                <span class="blind">2점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star4-3" class="input" name="star4">
+                            <label for="star4-3" class="label__star">
+                                <span class="blind">3점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star4-4" class="input" name="star4">
+                            <label for="star4-4" class="label__star">
+                                <span class="blind">4점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star4-5" class="input" name="star4">
+                            <label for="star4-5" class="label__star">
+                                <span class="blind">5점</span>
+                            </label>
+                        </div>
+                    </div>
+                    <span class="scope">180</span>
+                </div>
                 <a href="#">
-                    <p class="title">버거인</p>
-                    <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                    <div class="list__info">
+                        <span class="location">강남 · 서울특별시</span>
+                        <p class="title">버거인</p>
+                        <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
+                    </div>
                 </a>
             </li>
             <li>
+                <img src="../../assets/images/img_store5.png" alt="">
+                <div class="star__scope">
+                    <div class="star__input">
+                        <div class="input__wrap">
+                            <input type="radio" id="star5-1" class="input" name="star5">
+                            <label for="star5-1" class="label__star">
+                                <span class="blind">1점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star5-2" class="input" name="star5">
+                            <label for="star5-2" class="label__star">
+                                <span class="blind">2점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star5-3" class="input" name="star5">
+                            <label for="star5-3" class="label__star">
+                                <span class="blind">3점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star5-4" class="input" name="star5">
+                            <label for="star5-4" class="label__star">
+                                <span class="blind">4점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star5-5" class="input" name="star5">
+                            <label for="star5-5" class="label__star">
+                                <span class="blind">5점</span>
+                            </label>
+                        </div>
+                    </div>
+                    <span class="scope">180</span>
+                </div>
                 <a href="#">
-                    <p class="title">피자업</p>
-                    <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                        <div class="list__info">
+                        <span class="location">강남 · 서울특별시</span>
+                        <p class="title">피자업</p>
+                        <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
+                    </div>
                 </a>
             </li>
             <li>
+                <img src="../../assets/images/img_store6.png" alt="">
+                <div class="star__scope">
+                    <div class="star__input">
+                        <div class="input__wrap">
+                            <input type="radio" id="star6-1" class="input" name="star6">
+                            <label for="star6-1" class="label__star">
+                                <span class="blind">1점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star6-2" class="input" name="star6">
+                            <label for="star6-2" class="label__star">
+                                <span class="blind">2점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star6-3" class="input" name="star6">
+                            <label for="star6-3" class="label__star">
+                                <span class="blind">3점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star6-4" class="input" name="star6">
+                            <label for="star6-4" class="label__star">
+                                <span class="blind">4점</span>
+                            </label>
+                        </div>
+                        <div class="input__wrap">
+                            <input type="radio" id="star6-5" class="input" name="star6">
+                            <label for="star6-5" class="label__star">
+                                <span class="blind">5점</span>
+                            </label>
+                        </div>
+                    </div>
+                    <span class="scope">180</span>
+                </div>
                 <a href="#">
-                    <p class="title">라멘101</p>
-                    <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span> 
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p class="title">버거인</p>
-                    <span class="desc">두툼한 패티와 매일 직접 구운 빵</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p class="title">피자업</p>
-                    <span class="desc">도우부터 토핑재료 까지! 직접 골라보세요</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p class="title">라멘101</p>
-                    <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p class="title">우야우야</p>
-                    <span class="desc">스테이크와 와인 분위기 있는 식사</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p class="title">성수족발</p>
-                    <span class="desc">부드럽고 쫄깃한 성수동의 대표 매장</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p class="title">일오닭갈비</p>
-                    <span class="desc">100% 다리살로만 이루어진 매콤달콤 </span>
+                    <div class="list__info">
+                        <span class="location">강남 · 서울특별시</span>
+                        <p class="title">라멘101</p>
+                        <span class="desc">깊은 육수로 만들어낸 하나뿐인 맛 </span> 
+                    </div>
                 </a>
             </li>
         </ul>
