--- a/src/handlebars/templates/index.hbs
+++ b/src/handlebars/templates/index.hbs
@@ -1,3 +1,281 @@
-{{#[../helpers/layout-search] htmlWebpackPlugin}}
+<style>
+    .wrap{;margin:20px;}
+    .wrap h1{padding:0 0 20px;color:#333;font-size:36px;text-align:center;border-bottom:1px solid #e0e0e0;}
+    table{width:100%;margin-top:20px;border-collapse:collapse;}
+    table tbody > tr:first-child td.depth1{color:#000;}
+    table tr.hr{border-top:2px solid #999;}
+    table th,
+    table td{padding:5px 0;color:#333;font-size:14px;text-align:center;border:1px solid #999;}
+    table th{background:#e0e0e0;}
+    table .depth1{color:#999;}
+</style>
+<div class="wrap">
     
-{{/[../helpers/layout-search]}} 
+	<h1>IA </h1>
+
+    <table>
+        <colgroup>
+            <col width="10%">
+            <col width="15%">
+            <col width="15%">
+            <col width="15%">
+            <col width="15%">
+            <col width="15%">
+            <col width="15%">
+        </colgroup>
+        <thead>
+            <tr>
+                <th scope="col">NO</th>
+                <th scope="col">1Depth</th>
+                <th scope="col">2Depth</th>
+                <th scope="col">3Depth</th>
+                <th scope="col">4Depth</th>
+                <th scope="col">work</th>
+                <th scope="col">LINK</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row" class="no">1</td>
+                <td class="depth1">메인</td>
+                <td class="depth2"></td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work">스크립트작업해야됨</td>
+                <td class="LINK"><a href="./main.html">main.html</a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td scope="row" class="no">2</td>
+                <td class="depth1">마이페이지</td>
+                <td class="depth2">내가 작성한 게시글</td>
+                <td class="depth3">목록</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">3</td>
+                <td class="depth1">마이페이지</td>
+                <td class="depth2">프로필수정</td>
+                <td class="depth3">사진변경</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">4</td>
+                <td class="depth1">마이페이지</td>
+                <td class="depth2">내가작성한 리뷰</td>
+                <td class="depth3">목록</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">5</td>
+                <td class="depth1">마이페이지</td>
+                <td class="depth2">먹킷리스트</td>
+                <td class="depth3">목록</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">6</td>
+                <td class="depth1">로그인</td>
+                <td class="depth2"></td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="html/login.html">login.html</a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">7</td>
+                <td class="depth1">로그인</td>
+                <td class="depth2">아이디찾기</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">8</td>
+                <td class="depth1">로그인</td>
+                <td class="depth2">비밀번호재설정</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">9</td>
+                <td class="depth1">회원</td>
+                <td class="depth2">회원가입</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="html/join.html">join.html</a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">10</td>
+                <td class="depth1">주변맛집</td>
+                <td class="depth2">목록</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">11</td>
+                <td class="depth1">맛집</td>
+                <td class="depth2">상세</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">12</td>
+                <td class="depth1">맛집</td>
+                <td class="depth2">등록</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">13</td>
+                <td class="depth1">맛집순위</td>
+                <td class="depth2">목록1</td>
+                <td class="depth3">목록2</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">14</td>
+                <td class="depth1">맛집</td>
+                <td class="depth2">목록1</td>
+                <td class="depth3">상세</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">15</td>
+                <td class="depth1">맛집</td>
+                <td class="depth2">목록1</td>
+                <td class="depth3">등록</td>
+                <td class="depth4">수정/삭제</td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">16</td>
+                <td class="depth1">허위맛집리스트</td>
+                <td class="depth2">목록</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">17</td>
+                <td class="depth1">맛집</td>
+                <td class="depth2">상세</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">18</td>
+                <td class="depth1">맛집</td>
+                <td class="depth2">등록</td>
+                <td class="depth3">수정/삭제</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">19</td>
+                <td class="depth1">커뮤니티게시판</td>
+                <td class="depth2">목록</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="html/notice.html">notice.html</a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">20</td>
+                <td class="depth1">커뮤니티게시판</td>
+                <td class="depth2">상세</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">21</td>
+                <td class="depth1">커뮤니티게시판</td>
+                <td class="depth2">등록</td>
+                <td class="depth3">수정/삭제</td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">22</td>
+                <td class="depth1">커뮤니티게시판</td>
+                <td class="depth2">공지사항</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">23</td>
+                <td class="depth1">커뮤니티게시판</td>
+                <td class="depth2">Q&A</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr class="hr">
+                <td scope="row" class="no">24</td>
+                <td class="depth1">가이드</td>
+                <td class="depth2">style</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+            <tr>
+                <td scope="row" class="no">25</td>
+                <td class="depth1">가이드</td>
+                <td class="depth2">팝업</td>
+                <td class="depth3"></td>
+                <td class="depth4"></td>
+                <td class="work"></td>
+                <td class="LINK"><a href="#none"></a></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
