--- a/src/handlebars/partials/header.hbs
+++ b/src/handlebars/partials/header.hbs
@@ -5,7 +5,7 @@
         <li><a href="#">맛집순위</a></li>
         <li><a href="#">허위맛집리스트</a></li>
         <li><a href="#">커뮤니티게시판</a></li>
-        <li><a href="#">가이드</a></li>
+        <li><a href="./index.html">IA</a></li>
     </ul>
   </nav>
 </header>
