--- a/src/handlebars/templates/login.hbs
+++ b/src/handlebars/templates/login.hbs
@@ -7,23 +7,25 @@
         <div class="login">
             <div class="login__form">
                 <div class="input__wrap id">
-                    <input type="text" class="input">
+                    <input type="text" class="input" placeholder="아이디 입력">
                 </div>
                 <div class="input__wrap pw">
-                    <input type="password" class="input loging__pw">
+                    <input type="password" class="input loging__pw" placeholder="비밀번호 입력">
                 </div>
-                <div>
-                    <input type="checkbox" id="login1" class="input login__chk">
-                    <label for="login1">로그인 정보 저장하기</label>
-                </div>
-                <div class="links">
-                    <a href="./join.html" class="links join">회원가입</a>
-                    <a href="./find.html" class="links find">아이디찾기 / 비밀번호 찾기</a>
+                <div class="login__func">
+                    <div class="input__wrap">
+                        <input type="checkbox" id="login1" class="input login__chk">
+                        <label for="login1">로그인 정보 저장하기</label>
+                    </div>
+                    <div class="links">
+                        <a href="./join.html" class="links join">회원가입</a>
+                        <a href="./find.html" class="links find">아이디찾기 / 비밀번호 찾기</a>
+                    </div>
                 </div>
             </div>
 
             <div class="login__btn">
-                <button type="button" class="button login">로그인</button>
+                <button type="button" class="button btnLogin">로그인</button>
             </div>
             
         </div>
