--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -1,6 +1,55 @@
 // input
 .input__wrap {
     display: inline-block;
+    position: relative;
+
+    .input {
+        &[type="text"],
+        &[type="date"],
+        &[type="password"],
+        &[type="tel"],
+        &[type="number"] {
+            position: relative;
+            display: block;
+            width: 100%; 
+            height: 100%;
+            color:$gray300;
+            line-height: 5.9rem;
+            text-indent: 0.1rem;
+            text-align: left;
+            border: 0;
+            border-bottom: 0.1rem solid $gray300;
+            border-radius: 0;
+            appearance: none;
+            -webkit-appearance: none;
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            transition: 1s all;
+
+            &:hover,
+            &:focus {
+                border-color: $point1;
+            }
+
+            &::placeholder {
+                font-family: "s-core", sans-serif;
+                color: $gray9b;
+            }
+        }
+    }
+    input[type='text'],
+input[type='date'],
+input[type='password'],
+input[type='tel'],
+input[type='email'],
+input[type='number']{}
+input[type='text']:focus,
+input[type='password']:focus,
+input[type='number']:focus,
+input[type='tel']:focus,
+input[type='email']:focus,
+input[type='date']:focus {}
 }
 // 별점
 
