로그인 스타일 수정

--- a/src/assets/scss/templates/_login.scss
+++ b/src/assets/scss/templates/_login.scss
@@ -21,7 +21,8 @@
     .input__wrap {
         display: block;
 
-        .input {
+        .input[type="text"],
+        .input[type="password"] {
             padding: 2rem 0 1.7rem;
             font-size: 1.8rem;
         }
@@ -33,6 +34,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    .input__wrap {
+        display: flex;
+        font-size: 14rem;
+    }
 }
 
 .login__btn {
