--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -37,19 +37,33 @@
                 color: $gray9b;
             }
         }
+
+        &[type="checkbox"],
+        &[type="radio"] {
+            + label {
+                padding-left: 3.7rem;
+                color: $gray600;
+                font-weight: 400;
+                font-size: 1.4rem;
+                line-height: 2.8rem;
+                background: url("../../assets/images/ico_nochk.png") no-repeat left;
+                transition: 0.15s ease;
+            }
+
+            &:hover,
+            &:focus {
+                + label {
+                    font-weight: 500;
+                }
+            }
+
+            &:checked {
+                + label {
+                    background: url("../../assets/images/ico_chk.png") no-repeat left;
+                }
+            }
+        }
     }
-    input[type='text'],
-input[type='date'],
-input[type='password'],
-input[type='tel'],
-input[type='email'],
-input[type='number']{}
-input[type='text']:focus,
-input[type='password']:focus,
-input[type='number']:focus,
-input[type='tel']:focus,
-input[type='email']:focus,
-input[type='date']:focus {}
 }
 // 별점
 
