--- a/src/assets/scss/components/_text.scss
+++ b/src/assets/scss/components/_text.scss
@@ -36,3 +36,19 @@
         letter-spacing: -0.025rem;
     }
 }
+
+.links {
+    a {
+        &:not(:first-child) {
+            vertical-align: top;
+            &::before {
+                content: '';
+                display: inline-block;
+                width: 0.1rem;
+                height: 1.4rem;
+                margin: -0.2rem 1.7rem;
+                background: $gray600;
+            }
+        }
+    }
+}
