--- a/src/assets/scss/templates/_login.scss
+++ b/src/assets/scss/templates/_login.scss
@@ -17,6 +17,7 @@
 }
 
 .login__form {
+    width: 47rem;
 
     .input__wrap {
         display: block;
@@ -34,10 +35,25 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 1.7rem 0 0;
+    color: $gray600;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 3rem;
 
     .input__wrap {
         display: flex;
         font-size: 14rem;
+    }
+
+    .links {
+        a {
+            color: $gray600;
+            &:hover,
+            &:focus {
+                font-weight: 500;
+            }
+        }
     }
 }
 
