--- a/src/handlebars/templates/login.hbs
+++ b/src/handlebars/templates/login.hbs
@@ -32,17 +32,17 @@
 
         <ul class="snsLogin__list">
             <li>
-                <a href="#">
+                <a href="#" class="sns__kakao">
                     <span class="blind">카카오</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="sns__naver">
                     <span class="blind">네이버</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="sns__facebook">
                     <span class="blind">페이스북</span>
                 </a>
             </li>
