인덱스 수정

--- a/src/handlebars/templates/index.hbs
+++ b/src/handlebars/templates/index.hbs
@@ -120,7 +120,7 @@
                 <td class="depth3"></td>
                 <td class="depth4"></td>
                 <td class="work"></td>
-                <td class="LINK"><a href="html/join.html">join.html</a></td>
+                <td class="LINK"><a href="./join.html">join.html</a></td>
             </tr>
         </tbody>
         <tbody>
