텍스트 수정

--- a/src/assets/scss/components/_text.scss
+++ b/src/assets/scss/components/_text.scss
@@ -15,10 +15,14 @@
 .title {
     text-align: center;
     margin: 0 0 1.5rem;
+
+    [class^="h"] {
+        color: $point1;
+    }
     
     .h1 {
-        font-size: $font-3xl;
-        font-weight: 600;
+        font-size: 4.8rem;
+        font-weight: 400;
     }
 
     .h2 {
