--- a/src/assets/scss/components/_text.scss
+++ b/src/assets/scss/components/_text.scss
@@ -56,3 +56,11 @@
         }
     }
 }
+
+.error {
+    display: inline-block;
+    color: $point3;
+    font-size: 1.8rem;
+    font-weight: 300;
+    vertical-align: middle;
+}
