--- a/src/assets/scss/utilities/_variables.scss
+++ b/src/assets/scss/utilities/_variables.scss
@@ -5,6 +5,8 @@ $white: #fff;
 // gray
 $gray46: #464646;
 $gray9b: #9b9b9b;
+$grayBc: #bcbcbc;
+$grayFb: #fbfbfb;
 $gray100: #e0e0e0;
 $gray300: #333;
 $gray600: #666;
