--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -11,15 +11,12 @@
         &[type="number"] {
             position: relative;
             display: block;
-            width: 100%; 
+            width: 100%;
             height: 100%;
-            color:$gray300;
-            line-height: 5.9rem;
-            text-indent: 0.1rem;
+            padding: 1.5rem 2rem 1.4rem;
+            color: $gray300;
             text-align: left;
-            border: 0;
-            border-bottom: 0.1rem solid $gray300;
-            border-radius: 0;
+            background: $white;
             appearance: none;
             -webkit-appearance: none;
             box-sizing: border-box;
@@ -27,14 +24,10 @@
             -moz-box-sizing: border-box;
             transition: 1s all;
 
-            &:hover,
-            &:focus {
-                border-color: $point1;
-            }
 
             &::placeholder {
                 font-family: "s-core", sans-serif;
-                color: $gray9b;
+                color: $gray900;
             }
         }
 
@@ -64,9 +57,66 @@
             }
         }
     }
-}
-// 별점
 
+    + .error {
+        margin-left: 1.8rem;
+    }
+}
+
+.input__group {
+    display: flex;
+    align-items: center;
+
+    &.input__3 {
+        .input__wrap {
+            width: calc(100% / 3);
+        }
+    }
+
+    .input__text {
+        display: inline-block;
+        margin: 0 1rem;
+        color: $gray900;
+        font-size: 1.6rem;
+        font-weight: 300;
+    }
+
+    &.vertical {
+        align-items: flex-start;
+        flex-direction: column;
+        width: calc(100% - 26.5rem);
+        
+        .input__wrap {
+            width: 100%;
+            + .input__wrap {
+                margin: 1rem 0 0;
+            }
+        }
+
+        &.address {
+            .input__wrap {
+                &:first-child {
+                    width: 50%;
+                }
+            }
+        }
+    }
+}
+
+// select 
+
+.select {
+    padding: 1.5rem 5.2rem 1.4rem 2rem;
+    color: $gray900;
+    text-align: left;
+    background: $white;
+
+}
+
+
+
+
+// 별점
 .star__scope {
     display: flex;
     align-items: center;
