--- a/src/handlebars/templates/join.hbs
+++ b/src/handlebars/templates/join.hbs
@@ -12,7 +12,7 @@
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th>이름</th>
+                        <th class="th">이름</th>
                         <td>
                             <div class="input__wrap">
                                 <input type="text" class="input" placeholder="아이디 입력">
@@ -20,58 +20,85 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>연락처</th>
+                        <th class="th">연락처</th>
                         <td>
-                            <div class="input__wrap">
-                                <select class="select">
-                                    <option value="">선택</option>
-                                </select>
-                                <input type="number" class="input">
-                                <input type="number" class="input">
+                            <div class="input__group input__3">
+                                <div class="input__wrap">
+                                    <select class="select">
+                                        <option value="">010</option>
+                                    </select>
+                                </div>
+                                <div class="input__wrap">
+                                    <input type="number" class="input">
+                                </div>
+                                <div class="input__wrap">
+                                    <input type="number" class="input">
+                                </div>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <th>아이디</th>
-                        <td>
-                            <div class="input__wrap">
-                                <select class="select">
-                                    <option value="">선택</option>
-                                </select>
-                                <input type="number" class="input">
-                                <input type="number" class="input">
-                            </div>
-                            <button type="button" class="button btnGray">중복확인</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>비밀번호</th>
+                        <th class="th">아이디</th>
                         <td>
                             <div class="input__wrap">
                                 <input type="text" class="input" placeholder="아이디 입력">
                             </div>
+                            <button type="button" class="button btnGray small">중복확인</button>
                         </td>
                     </tr>
                     <tr>
-                        <th>비밀번호 확인</th>
+                        <th class="th">비밀번호</th>
                         <td>
                             <div class="input__wrap">
-                                <input type="text" class="input" placeholder="아이디 입력">
+                                <input type="password" class="input" placeholder="비밀번호 입력">
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="th">비밀번호 확인</th>
+                        <td>
+                            <div class="input__wrap">
+                                <input type="password" class="input" placeholder="비밀번호 입력">
                             </div>
                             <span class="error">비밀번호가 다릅니다.</span>
                         </td>
                     </tr>
                     <tr>
-                        <th>이메일</th>
+                        <th class="th">이메일</th>
+                        <td>
+                            <div class="input__group">
+                                <div class="input__wrap">
+                                    <input type="text" class="input" placeholder="우편번호 주소">
+                                </div>
+                                <span class="input__text">@</span>
+                                <div class="input__wrap">
+                                    <input type="text" class="input" placeholder="우편번호 주소">
+                                </div>
+                                <div class="input__wrap">
+                                    <select class="select">
+                                        <option value="">선택</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="th">우편번호</th>
                         <td>dd</td>
                     </tr>
                     <tr>
-                        <th>우편번호</th>
-                        <td>dd</td>
-                    </tr>
-                    <tr>
-                        <th>주소</th>
-                        <td>dd</td>
+                        <th class="th">주소</th>
+                        <td>
+                            <div class="input__group vertical address">
+                                <div class="input__wrap">
+                                    <input type="text" class="input" placeholder="우편번호 주소">
+                                </div>
+                                <div class="input__wrap">
+                                    <input type="text" class="input" placeholder="상세 주소 입력">
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                 </tbody>
             </table>
