우편번호 추가

--- a/src/handlebars/templates/join.hbs
+++ b/src/handlebars/templates/join.hbs
@@ -85,7 +85,12 @@
                     </tr>
                     <tr>
                         <th class="th">우편번호</th>
-                        <td>dd</td>
+                        <td>
+                            <div class="input__wrap">
+                                <input type="text" class="input" placeholder="우편번호 주소">
+                            </div>
+                            <button type="button" class="button btnGray small">찾아보기</button>
+                        </td>
                     </tr>
                     <tr>
                         <th class="th">주소</th>
