--- a/src/assets/scss/components/_text.scss
+++ b/src/assets/scss/components/_text.scss
@@ -51,7 +51,7 @@
                 width: 0.1rem;
                 height: 1.4rem;
                 margin: -0.2rem 1.7rem;
-                background: $gray600;
+                border: 0.1rem solid $gray600;
             }
         }
     }
