--- a/src/handlebars/templates/index.hbs
+++ b/src/handlebars/templates/index.hbs
@@ -90,7 +90,7 @@
                 <td class="depth2"></td>
                 <td class="depth3"></td>
                 <td class="depth4"></td>
-                <td class="work"></td>
+                <td class="work">input 스크립트</td>
                 <td class="LINK"><a href="./login.html">login.html</a></td>
             </tr>
             <tr>
