--- a/src/handlebars/templates/join.hbs
+++ b/src/handlebars/templates/join.hbs
@@ -23,7 +23,7 @@
                         <th class="th">연락처</th>
                         <td>
                             <div class="input__group input__3">
-                                <div class="input__wrap">
+                                <div class="select__wrap">
                                     <select class="select">
                                         <option value="">010</option>
                                     </select>
@@ -66,7 +66,7 @@
                     <tr>
                         <th class="th">이메일</th>
                         <td>
-                            <div class="input__group">
+                            <div class="input__group email">
                                 <div class="input__wrap">
                                     <input type="text" class="input" placeholder="우편번호 주소">
                                 </div>
@@ -74,7 +74,7 @@
                                 <div class="input__wrap">
                                     <input type="text" class="input" placeholder="우편번호 주소">
                                 </div>
-                                <div class="input__wrap">
+                                <div class="select__wrap">
                                     <select class="select">
                                         <option value="">선택</option>
                                     </select>
