--- a/src/handlebars/templates/login.hbs
+++ b/src/handlebars/templates/login.hbs
@@ -6,11 +6,11 @@
 
         <div class="login">
             <div class="login__form">
-                <div class="input__wrap id">
+                <div class="input__wrap input__id">
                     <input type="text" class="input" placeholder="아이디 입력">
                 </div>
-                <div class="input__wrap pw">
-                    <input type="password" class="input loging__pw" placeholder="비밀번호 입력">
+                <div class="input__wrap input__pw">
+                    <input type="password" class="input" placeholder="비밀번호 입력">
                 </div>
                 <div class="login__func">
                     <div class="input__wrap">
