검색 영역 버튼 스타일 수정

--- a/src/assets/scss/layout/_search.scss
+++ b/src/assets/scss/layout/_search.scss
@@ -52,6 +52,7 @@
             display: inline-block;
             width: 14rem;
             height: 100%;
+            margin: 0;
             background: url("../../assets/images/icon_search.png") no-repeat center $point1;
             
             &:hover {
