--- a/mall/src/App.css
+++ b/mall/src/App.css
@@ -12,3 +12,15 @@ a {
 }
 img {width: 100%; height: 100%;}
 .form .img {display: inline-block; width: 250px; height: 250px;}
+
+.blind {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+  white-space: nowrap; /* 줄바꿈 방지 */
+}
