--- a/mall/src/App.css
+++ b/mall/src/App.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
+  max-width: 100%;
 }
+* {box-sizing: border-box;}
 ul {
   padding: 0;
   margin: 0;
@@ -11,7 +13,6 @@ a {
   text-decoration: none;
 }
 img {width: 100%; height: 100%;}
-.form .img {display: inline-block; width: 250px; height: 250px;}
 
 .blind {
   position: absolute;
